# hausmaus

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  config.yaml
.github/workflows/: build_arm.yml  release.yml  rust.yml
src/: auto.rs  device.rs  dummy.rs  errors.rs  lib.rs  main.rs  maus.rs  models.rs  mqtt.rs  sysfs.rs
src/mqtt/: publish.rs  subscribe.rs
src/sysfs/: crawl.rs  read.rs  write.rs
