[package]
name = "hausmaus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
tokio = { version = "1.28.1", features = ["full"] }
slug = "0.1.4"
hostname = "0.3.1"
futures = "0.3.28"
rumqttc = "0.22.0"

[dev-dependencies]
tempdir = "0.3.7"
