[package]
name = "hausmaus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.7.3"
slug = "0.1.4"
hostname = "0.3.1"
rumqttc = "0.22.0"
crossbeam = "0.8.2"
futures = "0.3.28"
serde_yaml = "0.9.25"
serde = { version = "1.0.189", features = ["derive"] }
crossbeam-channel = "0.5.8"

[dev-dependencies]
tempdir = "0.3.7"
